feat: api package

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -2,6 +2,7 @@
   "name": "site",
   "private": true,
   "sideEffects": false,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "build": "remix build",
