--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "references": [
-        {"path": "./packages/site"},
-        {"path": "./packages/bot"}
-    ],
-    "files": [],
-    "include": [],
-    "exclude": ["**/node_modules"]
+  "references": [
+    { "path": "./packages/api" },
+    { "path": "./packages/site" },
+    { "path": "./packages/bot" }
+  ],
+  "files": [],
+  "include": [],
+  "exclude": ["**/node_modules"]
 }
