--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -2,21 +2,29 @@
   "name": "bot",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev --test-scheduled"
+    "dev": "wrangler dev --test-scheduled",
+    "ngrok": "ngrok http 8787",
+    "register": "tsx ./src/register.ts"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
     "typescript": "^5.0.4",
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.22.2"
   },
   "dependencies": {
+    "@discordjs/builders": "^1.7.0",
+    "api": "./packages/api",
     "discord-api-methods": "^0.0.5",
     "discord-api-types": "^0.37.67",
+    "discord-bitflag": "^1.0.1",
     "discord-snowflake": "^2.0.0",
     "discord-verify": "^1.2.0",
     "drizzle-orm": "^0.29.2",
-    "itty-router": "^4.0.25"
+    "itty-router": "^4.0.25",
+    "ngrok": "^5.0.0-beta.2",
+    "tsx": "^4.7.0"
   }
 }
