feat(bot): initial commands & utils

--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -1,16 +1,37 @@
 name = "khl-bot"
 main = "src/index.ts"
+node_compat = true
 compatibility_date = "2023-12-18"
 
-# Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
-# Note: Use secrets to store sensitive data.
-# Docs: https://developers.cloudflare.com/workers/platform/environment-variables
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+KHL_TEAM_EMOJI_61 = "1192320180865466438"
+KHL_TEAM_EMOJI_40 = "1192320195600076871"
+KHL_TEAM_EMOJI_12 = "1192320186796220416"
+KHL_TEAM_EMOJI_10 = "1192320215942451361"
+KHL_TEAM_EMOJI_56 = "1192320285265891479"
+KHL_TEAM_EMOJI_46 = "1192320178474713138"
+KHL_TEAM_EMOJI_16 = "1192320194186592377"
+KHL_TEAM_EMOJI_38 = "1192320182224429076"
+KHL_TEAM_EMOJI_8 = "1192320219511804064"
+KHL_TEAM_EMOJI_315 = "1192320175698083920"
+KHL_TEAM_EMOJI_105 = "1192320210447896587"
+KHL_TEAM_EMOJI_26 = "1192320224217808907"
+KHL_TEAM_EMOJI_30 = "1192320222217130055"
+KHL_TEAM_EMOJI_36 = "1192320184069926974"
+KHL_TEAM_EMOJI_32 = "1192320204793987072"
+KHL_TEAM_EMOJI_42 = "1192320190080352336"
+KHL_TEAM_EMOJI_24 = "1192320191745503292"
+KHL_TEAM_EMOJI_44 = "1192320214109528064"
+KHL_TEAM_EMOJI_113 = "1192320172883718184"
+KHL_TEAM_EMOJI_18 = "1192319161175650404"
+KHL_TEAM_EMOJI_22 = "1192320286821982218"
+KHL_TEAM_EMOJI_28 = "1192320198385090611"
+KHL_TEAM_EMOJI_34 = "1192320177157722162"
 
 [triggers]
 crons = ["* * * * *"] # run every minute
 
-# [[kv_namespaces]]
-# binding = "KV"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+[[kv_namespaces]]
+binding = "KV"
+id = "7dfb9367010c4892ba02b12ec4b35fed"
+preview_id = "e4d99620fddd4e959acd584ab2ca15ee"
