feat(api): use khl-api-types

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,5 +9,7 @@
   "devDependencies": {
     "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "khl-api-types": "^1.1.1"
+  }
 }
