--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
+    "khl-api-types": "^1.1.1",
     "typescript": "^5.0.4",
     "wrangler": "^3.22.2"
   },
