feat(bot): pwhl emojis

--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -27,6 +27,12 @@ KHL_TEAM_EMOJI_18 = "1192319161175650404"
 KHL_TEAM_EMOJI_22 = "1192320286821982218"
 KHL_TEAM_EMOJI_28 = "1192320198385090611"
 KHL_TEAM_EMOJI_34 = "1192320177157722162"
+PWHL_TEAM_EMOJI_1 = "1194368779086479410"
+PWHL_TEAM_EMOJI_2 = "1194368777832382605"
+PWHL_TEAM_EMOJI_3 = "1194368786543956010"
+PWHL_TEAM_EMOJI_4 = "1194368791283519660"
+PWHL_TEAM_EMOJI_5 = "1194368782131540099"
+PWHL_TEAM_EMOJI_6 = "1194368796224393328"
 
 [triggers]
 crons = ["* * * * *"] # run every minute
