--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
+    "@haverstack/axios-fetch-adapter": "^0.12.0",
     "api": "./packages/api",
     "discord-api-methods": "^0.0.5",
     "discord-api-types": "^0.37.67",
@@ -24,6 +25,7 @@
     "discord-snowflake": "^2.0.0",
     "discord-verify": "^1.2.0",
     "drizzle-orm": "^0.29.2",
+    "hockeytech": "shayypy/hockeytech",
     "itty-router": "^4.0.25",
     "ngrok": "^5.0.0-beta.2",
     "tsx": "^4.7.0"
