--- a/packages/bot/wrangler.toml
+++ b/packages/bot/wrangler.toml
@@ -27,6 +27,7 @@ KHL_TEAM_EMOJI_18 = "1192319161175650404"
 KHL_TEAM_EMOJI_22 = "1192320286821982218"
 KHL_TEAM_EMOJI_28 = "1192320198385090611"
 KHL_TEAM_EMOJI_34 = "1192320177157722162"
+PWHL_LOGO = "https://hockey-bot.s3.us-east-005.backblazeb2.com/leagues/pwhl.jpg"
 PWHL_TEAM_EMOJI_1 = "1194368779086479410"
 PWHL_TEAM_EMOJI_2 = "1194368777832382605"
 PWHL_TEAM_EMOJI_3 = "1194368786543956010"
