--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
-    "khl-api-types": "^1.1.1",
+    "khl-api-types": "^1.1.2",
     "typescript": "^5.0.4",
     "wrangler": "^3.22.2"
   },
@@ -25,7 +25,7 @@
     "discord-snowflake": "^2.0.0",
     "discord-verify": "^1.2.0",
     "drizzle-orm": "^0.29.2",
-    "hockeytech": "shayypy/hockeytech",
+    "hockeytech": "^1.4.0",
     "itty-router": "^4.0.25",
     "ngrok": "^5.0.0-beta.2",
     "tsx": "^4.7.0"
