--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -17,9 +17,9 @@
   },
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
+    "@discordjs/rest": "^2.2.0",
     "@haverstack/axios-fetch-adapter": "^0.12.0",
     "api": "./packages/api",
-    "discord-api-methods": "^0.0.5",
     "discord-api-types": "^0.37.67",
     "discord-bitflag": "^1.0.1",
     "discord-snowflake": "^2.0.0",
