--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -26,7 +26,7 @@
     "discord-snowflake": "^2.0.0",
     "discord-verify": "^1.2.0",
     "drizzle-orm": "^0.29.2",
-    "hockeytech": "^1.4.0",
+    "hockeytech": "shayypy/hockeytech",
     "itty-router": "^4.0.25",
     "ngrok": "^5.0.0-beta.2",
     "table": "^6.8.1",
