--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -26,6 +26,7 @@
     "@remix-run/dev": "^2.4.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.0",
     "wrangler": "^3.8.0"
