--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,13 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
   "files": {
-    "ignore": ["node_modules/", "build/", "./packages/site/functions/"]
+    "ignore": [
+      "node_modules/",
+      "build/",
+      "./packages/site/functions/",
+      "./packages/site/bot/migrations/",
+      ".wrangler/"
+    ]
   },
   "organizeImports": {
     "enabled": true
