--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
       "build/",
       "./packages/site/functions/",
       "./packages/site/bot/migrations/",
-      ".wrangler/"
+      ".wrangler/",
+      "./migrations/"
     ]
   },
   "organizeImports": {
