--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -17,6 +17,7 @@
     "@remix-run/cloudflare-pages": "^2.4.0",
     "@remix-run/css-bundle": "^2.4.0",
     "@remix-run/react": "^2.4.0",
+    "feed": "^4.2.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
