--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -9,8 +9,9 @@
     "dev": "wrangler dev --test-scheduled",
     "ngrok": "ngrok http 8787",
     "register": "tsx ./src/register.ts",
-    "migrate-dev": "drizzle-kit generate:sqlite --schema=src/db/schema.ts --out=./migrations && wrangler d1 migrations apply DB --local",
-    "migrate": "yarn migrate-dev && wrangler d1 migrations apply DB",
+    "db-generate": "drizzle-kit generate:sqlite --schema=src/db/schema.ts --out=./migrations",
+    "db-migrate-dev": "wrangler d1 migrations apply DB --local",
+    "db-migrate": "wrangler d1 migrations apply DB",
     "look": "wrangler kv:key get --local --binding=KV",
     "sql": "wrangler d1 execute DB --local"
   },
@@ -33,6 +34,7 @@
     "hockeytech": "^1.4.2",
     "itty-router": "^4.0.25",
     "ngrok": "^5.0.0-beta.2",
+    "pope": "^3.0.0",
     "table": "^6.8.1",
     "tsx": "^4.7.0"
   }
