--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev --test-scheduled",
-    "ngrok": "ngrok http 8787",
+    "tunnel": "cloudflared tunnel --url http://localhost:8787",
     "register": "tsx ./src/register.ts",
     "db-generate": "drizzle-kit generate:sqlite --schema=src/db/schema.ts --out=./migrations",
     "db-migrate-dev": "wrangler d1 migrations apply DB --local",
@@ -20,7 +20,7 @@
     "drizzle-kit": "^0.20.14",
     "khl-api-types": "^1.1.2",
     "typescript": "^5.0.4",
-    "wrangler": "^3.22.2"
+    "wrangler": "^4.50.0"
   },
   "dependencies": {
     "@discordjs/builders": "^1.11.2",
@@ -33,7 +33,6 @@
     "drizzle-orm": "^0.29.3",
     "hockeytech": "^1.4.2",
     "itty-router": "^4.0.25",
-    "ngrok": "^5.0.0-beta.2",
     "pope": "^3.0.0",
     "table": "^6.8.1",
     "tsx": "^4.7.0"
