chore: upgrade biome

--- a/biome.json
+++ b/biome.json
@@ -1,24 +1,30 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "files": {
-    "ignore": [
-      "node_modules/",
-      "build/",
-      "./packages/site/functions/",
-      "./packages/site/bot/migrations/",
-      ".wrangler/",
-      "./migrations/"
+    "includes": [
+      "**",
+      "!packages/site/public",
+      "!packages/site/functions",
+      "!packages/bot/migrations",
+      "!packages/bot/.wrangler"
     ]
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "style": {
-        "noUselessElse": "off"
+        "noUselessElse": "off",
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error"
       },
       "suspicious": {
         "noExplicitAny": "off"
